unpackaged/main/default/objects/sked_Drive_Bag__c/sked_Drive_Bag__c.object-meta.xml
<CustomObject>
    <label>Drive Bag</label>
    <nameField>
        <displayFormat>DB-{000000}</displayFormat>
        <label>Drive Bag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Bags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>