unpackaged/main/default/objects/sked_Drive_Bag__c/fields/sked_Drive_Delivery_Job__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Delivery_Job__c</fullName>
    <label>Drive Delivery Job</label>
    <referenceTo>sked_Drive_Delivery_Job__c</referenceTo>
    <relationshipLabel>Drive Bags</relationshipLabel>
    <relationshipName>sked_Drive_Bags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>