unpackaged/main/default/objects/sked_Drive_Bag__c/fields/sked_MigrationID__c.field-meta.xml
<CustomField>
    <fullName>sked_MigrationID__c</fullName>
    <label>MigrationID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>