unpackaged/main/default/objects/sked_Drive_Bag__c/fields/sked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>